Adding aditional data to news
