# internal/models/news.go
@@ -10,6 +10,8 @@ type News struct {
 	ID        uuid.UUID `json:"id"`
 	Title     string    `json:"title"`
 	Content   string    `json:"content"`
+	ImagePath string    `json:"image_path"`
+	Category  string    `json:"category"`
 	UserID    uuid.UUID `json:"user_id"`
 	CreatedAt time.Time `json:"created_at"`
 }
